# interface_stage

./: CHANGES_v2.md  DEBUG_GUIDE.md  IMAGE_DISPLAY_FIX.md  IMAGE_FIX_SUMMARY.md  QUICKSTART.md  README.md  RUN_LOGCAT.bat  pubspec.yaml  test_image_reading.bat
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  openjpeg_bridge.cpp  openjpeg_bridge_stub.cpp
android/app/src/main/jniLibs/: README.md
android/app/src/main/jniLibs/include/: opj_config.h
android/app/src/main/kotlin/com/example/interface_stage/: MainActivity.kt
android/app/src/main/kotlin/com/example/interface_stage/usb/: UsbConstants.kt
android/app/src/main/kotlin/com/takakotlin/usb/: DecodeResult.kt  OpenJpegBridge.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: routes.dart
lib/core/constants/: colors.dart
lib/core/services/: taka_usb_service.dart
lib/core/session/: user_session.dart
lib/core/widgets/: connection_banner.dart  dashboard_tile.dart
lib/features/caisse/: acte_consultation_page.dart  caisse_page.dart  laboratoire_page.dart  pharmacie_page.dart  radio_page.dart
lib/features/dashboard/presentation/: dashboard_page.dart
lib/features/hospitalisation/: hospitalisation_page.dart
lib/features/prestations/: prestations_page.dart
lib/features/reclamation/: reclamation_page.dart
lib/features/referentiel/: referentiel_data.dart  referentiel_page.dart
lib/features/validation/: qr_token_validation_page.dart  validation_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
